--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
         <input type="checkbox" id="toggleOpaque" />
         <label for="toggleOpaque" id="labelOpaque">Tắt trong suốt</label>
       </div>
+
+      <div class="sliderRow">
+        <label for="sliderAlpha" id="labelAlpha">Độ trong suốt orbital</label>
+        <input type="range" id="sliderAlpha" min="0" max="100" value="50" />
+        <div id="alphaValue">50%</div>
+      </div>
     </div>
 
     <hr />
